bat.bool1.in1020.In1020.scala.error
Compilation error:
In1020:3: error: illegal start of simple expression
} 
^